src/app/components/cms/calendar/calendar.component.scss
@import "../../../../styles";

:host ::ng-deep {
  .p-calendar .p-inputtext {
    text-align: center;
    border: none;
    &:hover {
      cursor: pointer;
      border-color: transparent;
    }
  }

  .p-calendar:not(.p-calendar-disabled).p-focus > .p-inputtext {
    box-shadow: none;
    border-color: transparent;
  }

  .p-calendar .p-datepicker {
    left: -100px !important;
  }
}

.table-wrapper {
  overflow-x: auto;
  max-height: calc(100vh - 170px);

  @media screen and (min-width: $lg) {
    max-height: calc(100vh - 130px);
  }
}

table {
  border-collapse: collapse;
  width: 100%;
}

td {
  border: 1px solid #000;
  margin: 0;
  min-width: 160px;
  max-width: 500px;
  position: relative;
}


thead th, .fixed-header {
  position: sticky;
  top: 0;
  background-color: #fff;
  white-space: nowrap;
  text-align: center;
  padding: 0;
}

.fixed-column {
  position: sticky;
  left: 0;
  background-color: #fff;
  z-index: 3;
  width: 40px;
}

.appointment {
  width: calc(100% - 6px);
  margin: 3px;
  border-radius: 8px;
  padding: 1rem;
  z-index: 1 !important;
  position: absolute;
  inset: 0;
  overflow: hidden;
  transition: transform 0.2s;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.65);

  &:hover {
    transform: scale(1.01);
  }

  .app-background {
    position: absolute;
    inset: 0;
    opacity: .85;
  }

  h4, p {
    z-index: 11 !important;
  }
}

.border-right {
  border: none;
  border-right: 1px solid #000;
}

.name-tag {
  min-width: 120px;
  height: 40px;
  z-index: 99;

  h4 {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #e9e8e8;
    border: 1px;
    padding: 0 1rem;
  }
}

.hour-tag {
  min-width: 60px;
  text-align: center;
  position: sticky;
  left: 0;
  height: 20px;
  background-color: #fff;
  border: none;
  height: 33px;

  h4 {
    transform: translateY(-16px);
    z-index: 4;
  }
}

thead tr:first-child th:first-child {
  border: none; /* Rimuove il bordo della prima cella della prima riga */
}


tr:last-child td {
  display: none;
}

.calendar-wrapper {
  display: flex;
  align-items: center;
  gap: 10px;
}

.nav-arrow {
  background: none;
  border: none;
  cursor: pointer;
  font-size: 1.5rem;
}

.nav-arrow:hover i{
  @media screen and (min-width: $lg) {
    transition: color .1s ease;
    color: #ff6200;
  }
}

.not-available-icon {
  background: repeating-linear-gradient(
    45deg,
    #f7f6f6,
    #f7f6f6 10px,
    #e9e6e6 10px,
    #e9e6e6 20px
  );
}

.quarter-hour {
  opacity: 0;
}

.half-hour {
  opacity: .5;
  font-size: .95rem;
}

.time-marker {
  position: absolute;
  height: 2px;
  background-color: #ff6200; /* Colore della linea */
  z-index: 10;

  /* Adatta la larghezza alla tabella interna */
  left: 0;
  width: 100%;
  transform: translateX(0);

  /* Segue lo scroll orizzontale */
  pointer-events: none;
}

